--- a/manifest.json
+++ b/manifest.json
@@ -1,31 +1,31 @@
-﻿{
-    "$schema": "https://raw.githubusercontent.com/bsmg/BSIPA-MetadataFileSchema/master/Schema.json",
-    "id": "OverswingCounter",
-    "name": "OverswingCounter",
-    "author": "Kinsi55",
-    "version": "0.1.0",
-    "description": "Counter for Counters+ that shows you how much swing angle it is that you have too much, or too little, compared to a 'perfect' swing",
-    "gameVersion": "1.16.0",
-    "dependsOn": {
-        "BSIPA": "^4.0.5",
-        "Counters+": "^2.2.0",
-        "BeatSaberMarkupLanguage": "^1.4.5"
-    },
-    "features": {
-        "CountersPlus.CustomCounter": {
-            "Name": "Overswing Counter",
-            "Description": "Point out the overswing of your cuts",
-            "CounterLocation": "OverswingCounter.OverswingCounter",
-            "ConfigDefaults": {
-                "Enabled": true,
-                "Position": "AboveCombo",
-                "Distance": 0
-            },
-            "BSML": {
-                "Resource": "OverswingCounter.settings.bsml",
-                "Host": "OverswingCounter.SettingsHandler",
-                "Icon": "OverswingCounter.Images.icon.png"
-            }
-        }
+{
+  "$schema": "https://raw.githubusercontent.com/bsmg/BSIPA-MetadataFileSchema/master/Schema.json",
+  "id": "OverswingCounter",
+  "name": "OverswingCounter",
+  "author": "Kinsi55, OrdinaryTable",
+  "version": "0.1.0",
+  "description": "Counter for Counters+ that shows you how much swing angle it is that you have too much, or too little, compared to a 'perfect' swing",
+  "gameVersion": "1.25.1",
+  "dependsOn": {
+    "BSIPA": "^4.2.0",
+    "BeatSaberMarkupLanguage": "^1.6.0",
+    "Counters+": "^2.2.7"
+  },
+  "features": {
+    "CountersPlus.CustomCounter": {
+      "Name": "Overswing Counter",
+      "Description": "Point out the overswing of your cuts",
+      "CounterLocation": "OverswingCounter.Counter.OverswingCounter",
+      "ConfigDefaults": {
+        "Enabled": true,
+        "Position": "AboveCombo",
+        "Distance": 0
+      },
+      "BSML": {
+        "Resource": "OverswingCounter.Counter.BSML.Settings.bsml",
+        "Host": "OverswingCounter.Counter.BSML.SettingsHandler",
+        "Icon": "OverswingCounter.Images.Icon.png"
+      }
     }
+  }
 }
