--- a/OverswingCounter.csproj
+++ b/OverswingCounter.csproj
@@ -31,6 +31,9 @@
             <HintPath>$(BeatSaberDir)\Plugins\Counters+.dll</HintPath>
             <Private>false</Private>
         </Reference>
+        <Reference Include="DataModels">
+          <HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\DataModels.dll</HintPath>
+        </Reference>
         <Reference Include="GameplayCore">
             <HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\GameplayCore.dll</HintPath>
             <Private>false</Private>
